--- a/html/javier_ortiz/index.html
+++ b/html/javier_ortiz/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <h1>Encuesta alumnado</h1>
-  <form action="/server/Procesa.php" method="get" enctype="multipart/form-data">
+  <form action="/server/Procesa.php" method="post" enctype="multipart/form-data">
     <fieldset>
       <legend>Datos iniciales</legend>
       <p>Seleccione a continuación cuales son los temas de su interés</p>
@@ -37,7 +37,7 @@
       </div>
       <div>
         <div><label for="fecha">	indique la fecha de incorporación al curso (que debe ser posterior al 15 de septiembre de 2019)</label></div>
-        <div><input type="date" name="data" id="date" value="data" min="2019-09-15"></div>
+        <div><input type="date" name="data" id="date" value="2019-09-15" max="2019-09-15"></div>
         <div>
           <label for="archivo">Adjunte dos fotos, una tipo DNI y otro de cuerpo entero</label>
           <input type="file" name="archivo" id="archivo">
